--- a/myapp/index.html
+++ b/myapp/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="myApp">
 <head>
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+	<script src = "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>
+	<script src="js/ViewWordController.js"></script>
+
 
     <link href="css/sticky-footer.css" rel="stylesheet">
 </head>
@@ -30,7 +35,7 @@
 		</div>
 	  </div>
 	</nav>
-	<div class="container">
+	<div class="container" ng-controller="ViewWordController">
 	  <!--<div class="jumbotron">
 		<h1>My First Bootstrap Page</h1>
 		<p>Resize this responsive page to see the effect!</p> 
@@ -56,25 +61,25 @@
 			  <form class="form-inline" role="form">
 				<div class="form-group form-filter">
 				  <label for="sel1">Filter By </label>
-				  <select class="form-control input-sm form-filter" id="sel1">
-					<option>Select Tag</option>
-					<option>2</option>
-					<option>3</option>
-					<option>4</option>
+				  <select class="form-control input-sm form-filter" id="sel1" ng-model="selectFilter" ng-options="tagItem as tagItem.name for tagItem in tagLists  ">
+				  	<!-- <option>Select Tag</option> -->
+					<!-- <option ng-repeat="tagItem in tagList">{{ tagItem.name }}</option> -->
 				  </select>
 				</div>
-				<button type="submit" class="btn btn-success btn-sm form-filter">Submit</button>
+				<button  class="btn btn-success btn-sm form-filter" ng-click="addFilter()">Add Filter</button>
 			  </form>
 			</div>
 			  <div id="tag-list">
-				<a href="#"><span>Stut x</span></a>
-				<a href="#"><span>Stut x</span></a>
-				<button type="button" class="btn btn-warning btn-xs">
-				  <span class="glyphicon  glyphicon-remove " aria-hidden="true"></span> Star
+				<!-- <a href="#" ng-repeat="tagChosen in tagChosenList"><span> {{tagChosen.name}} x</span></a> -->
+				<!-- <a href="#"><span>Stut x</span></a> -->
+				
+				<button type="submit" class="btn btn-warning btn-xs btn-filter" ng-repeat="tagChosen in tagChosenList">
+				  <span class="glyphicon  glyphicon-remove " aria-hidden="true"></span>{{tagChosen.name}}
 				</button>
-				<button type="button" class="btn btn-warning btn-xs">
+				<!-- <button type="button" class="btn btn-warning btn-xs">
 				  <span class="glyphicon  glyphicon-remove " aria-hidden="true"></span> Star
-				</button>
+				</button> -->
+
 			  </div>
 		</div>
 	</div>
@@ -182,26 +187,8 @@
       </div>
     </footer>-->
   <link rel="stylesheet" href="css/bootstrap-sandstone.min.css">
-  <style>
-	body {
-		<!--padding-top: 50px;--> 
-	}
-	
-	#tag-list{
-		padding:10px;
-	}
-	
-	#checkbox-show{
-		margin-top:15px;
-		margin-bottom:15px;
-	}
-	.form-filter {
-		display: inline-block;
-		margin-bottom: 0;
-		width: auto;
-	}
-  </style>
-  
+  <link rel="stylesheet" href="css/style.css">
+ 
   <!-- ceur flatly sandstone spacelab simplex -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
