--- a/myapp/index.html
+++ b/myapp/index.html
@@ -8,6 +8,7 @@
 	<script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 	<script src = "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>
 	<script src="js/ViewWordController.js"></script>
+	<script src="js/AddNewController.js"></script>
 
 
     <link href="css/sticky-footer.css" rel="stylesheet">
@@ -61,7 +62,7 @@
 			  <form class="form-inline" role="form">
 				<div class="form-group form-filter">
 				  <label for="sel1">Filter By </label>
-				  <select class="form-control input-sm form-filter" id="sel1" ng-model="selectFilter" ng-options="tagItem as tagItem.name for tagItem in tagLists  ">
+				  <select class="form-control input-sm form-filter" id="sel1" ng-model="selectFilter" ng-options="tagItem as tagItem.name for tagItem in tagLists | orderBy : 'name' ">
 				  	<!-- <option>Select Tag</option> -->
 					<!-- <option ng-repeat="tagItem in tagList">{{ tagItem.name }}</option> -->
 				  </select>
@@ -73,7 +74,7 @@
 				<!-- <a href="#" ng-repeat="tagChosen in tagChosenList"><span> {{tagChosen.name}} x</span></a> -->
 				<!-- <a href="#"><span>Stut x</span></a> -->
 				
-				<button type="submit" class="btn btn-warning btn-xs btn-filter" ng-repeat="tagChosen in tagChosenList">
+				<button type="submit" class="btn btn-warning btn-xs btn-filter" ng-repeat="tagChosen in tagChosenList " ng-click="removeFilter(tagChosen)">
 				  <span class="glyphicon  glyphicon-remove " aria-hidden="true"></span>{{tagChosen.name}}
 				</button>
 				<!-- <button type="button" class="btn btn-warning btn-xs">
@@ -83,55 +84,40 @@
 			  </div>
 		</div>
 	</div>
-	
-
 	<div id="checkbox-show">
-		<label class="checkbox-inline"><input type="checkbox"> Hai </label>
-		<label class="checkbox-inline"><input type="checkbox"> Hai </label>
-		<label class="checkbox-inline"><input type="checkbox"> Hai </label>
-		<label class="checkbox-inline"><input type="checkbox"> Hai </label>
+		<label class="checkbox-inline"><input type="checkbox" ng-model="checkWi"> Hai </label>
+		<label class="checkbox-inline"><input type="checkbox" ng-model="checkWr"> Hai </label>
+		<label class="checkbox-inline"><input type="checkbox" ng-model="checkWh"> Hai </label>
+		<label class="checkbox-inline"><input type="checkbox" ng-model="checkWk"> Hai </label>
 	</div>
 	  <!-- Table -->
 	  <table class="table table-hover table-striped">
 		<thead>
 		  <tr>
-			<th>Firstname</th>
-			<th>Second Name</th>
-			<th>Lastname</th>
-			<th>Email</th>
+			<th ng-show="checkWi">Firstname</th>
+			<th ng-show="checkWr">Second Name</th>
+			<th ng-show="checkWh">Lastname</th>
+			<th ng-show="checkWk">Email</th>
 		  </tr>
 		</thead>
 		<tbody>
-		  <tr>
-			<td>John</td>
-			<td>Doe</td>
-			<td>Loer</td>
-			<td>john</td>
+		  <tr ng-repeat="wordItem in wordLists ">
+			<td ng-show="checkWi">{{ wordItem.wi }}</td>
+			<td ng-show="checkWr">{{ wordItem.wr }}</td>
+			<td ng-show="checkWh">{{ wordItem.wh }}</td>
+			<td ng-show="checkWk">{{ wordItem.wk }}</td>
 		  </tr>
-		  <tr>
-			<td>Mary</td>
-			<td>Moe</td>
-			<td>Moar</td>
-			<td>mary</td>
-		  </tr>
-		  <tr><td>July</td><td>Dooley</td><td>Almar</td><td>july</td></tr>
-		  <tr><td>July</td><td>Dooley</td><td>Almar</td><td>july</td></tr>
-		  <tr><td>July</td><td>Dooley</td><td>Almar</td><td>july</td></tr>
-		  <tr><td>July</td><td>Dooley</td><td>Almar</td><td>july</td></tr>
-		  <tr><td>July</td><td>Dooley</td><td>Almar</td><td>july</td></tr>
-		  <tr><td>July</td><td>Dooley</td><td>Almar</td><td>july</td></tr>
-		  <tr><td>July</td><td>Dooley</td><td>Almar</td><td>july</td></tr>
-		  <tr><td>July</td><td>Dooley</td><td>Almar</td><td>july</td></tr>
 		</tbody>
 	  </table>
 	<!-- End Table -->
 	</div>
 	
 	<!-- Modal -->
-	<div id="addNewModal" class="modal fade" role="dialog">
+	<div id="addNewModal" class="modal fade" role="dialog" ng-controller="AddNewController">
 	  <div class="modal-dialog modal-md">
 
 		<!-- Modal content-->
+		<!-- <div ng-include="'modal_addnew.html'"></div> -->
 		<div class="modal-content">
 		  <div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -143,31 +129,31 @@
 				<div class="form-group">
 				  <label class="control-label col-sm-2" for="email">Email</label>
 				  <div class="col-sm-10">
-					<input type="email" class="form-control" id="email" placeholder="Enter email">
+					<input type="text" class="form-control" id="email" placeholder="Enter email" ng-model="formAddNew.inputWi"  ng-keyup="generating()">
 				  </div>
 				</div>
 				<div class="form-group">
 				  <label class="control-label col-sm-2" for="pwd">Password</label>
 				  <div class="col-sm-10">          
-					<input type="password" class="form-control" id="pwd" placeholder="Enter password">
+					<input type="text" class="form-control" id="pwd" placeholder="Enter password" ng-model="inputWr">
 				  </div>
 				</div>
 				<div class="form-group">
 				  <label class="control-label col-sm-2" for="email">Email</label>
 				  <div class="col-sm-10">
-					<input type="email" class="form-control" id="email" placeholder="Enter email">
+					<input type="text" class="form-control" id="email" placeholder="Enter email" ng-model="inputWh">
 				  </div>
 				</div>
 				<div class="form-group">
 				  <label class="control-label col-sm-2" for="email">Email</label>
 				  <div class="col-sm-10">
-					<input type="email" class="form-control" id="email" placeholder="Enter email">
+					<input type="text" class="form-control" id="email" placeholder="Enter email" ng-model="inputWk">
 				  </div>
 				</div>
 
 				<div class="form-group">        
 				  <div class="col-sm-offset-2 col-sm-10">
-					<button type="submit" class="btn btn-success">Submit</button>
+					<button type="button" class="btn btn-success" ng-click="change()">Save</button>
 				  </div>
 				</div>
 			  </form>
